# selfie-gen-ultimate

./: .gitattributes  .gitignore  .scratch_codex_pr96_review.txt  .scratch_pr96_diff.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  OLDCAM_DECISION_BRIEF.md  OLDCAM_GUIDE.md  README.md  RUN SUITE.bat  RUN SUITE.command  RUN_SUITE.bat  RUN_SUITE.command  SECURITY.md  START.bat  api_keys.py  app_version.py  build_gui_exe.bat  constraints.txt  create_icon.py  crop_polisher.py  default_config_template.json  dependency_checker.py  dependency_health_check.py  face_crop_service.py  face_similarity.py  fal_utils.py  gui_launcher.py  kling_automation_ui.py  kling_generator_falai.py  kling_gui_direct.spec  log_utils.py  ml_subprocess_bridge.py  model_metadata.py  model_schema_manager.py  models.json  outpaint_defaults.py  outpaint_generator.py  outpaint_geometry.py  (+22 more)
.claude/: session-log.md
.codex/: config.toml
.github/: dependabot.yml
aa-video/: .gitignore  README.local.md  aa_launcher.bat  aa_launcher.sh  main.py  pyproject.toml
aa-video/src/: generator_profiles.py  gpu_utils.py
aa-video/src/attribution_evasion/: trace_evader.py  trace_evader_gpu.py  trace_evader_optimized.py
aa-video/src/chunked_attacks/: __init__.py  alternating_chunked.py
aa-video/src/compression_attacks/: metadata_stripper.py  recompression.py
aa-video/src/pixel_attacks/: adversarial_perturbations.py  adversarial_perturbations_gpu.py  adversarial_perturbations_optimized.py
aa-video/src/replay_evasion/: __init__.py  analog_simulation.py  camera_recapture.py  micro_jitter.py
aa-video/src/smoothing_evasion/: __init__.py  frame_chaos.py  motion_modulation.py  sensor_noise.py
aa-video/src/temporal_attacks/: temporal_perturbations.py  temporal_perturbations_gpu.py  temporal_perturbations_optimized.py
aa-video/src/watermark_attacks/: watermark_remover.py
automation/: config.py  discovery.py  face_track_gate.py  logger.py  manifest.py  oldcam.py  pipeline.py  postproc_cleanup.py  postproc_plan.py  rppg.py  video_aa.py  video_crush.py
distribution/: BUILD_INSTRUCTIONS.md  README.md  RELEASE_NOTES_v2.3.md  api_keys.py  app_version.py  build_bundled_exe.py  build_oldcam_v13_zip.py  build_oldcam_v14_zip.py  build_release.bat  build_release.py  build_release_personal.py  build_similarity_zip.py  constraints.txt  crop_polisher.py  crop_upscaler.py  default_config_template.json  dependency_checker.py  dependency_health_check.py  fal_utils.py  gui_launcher.py  kling_generator_falai.py  kling_gui_bundled.spec  kling_gui_direct.spec  model_metadata.py  model_schema_manager.py  models.json  outpaint_generator.py  outpaint_geometry.py  path_utils.py  pyproject.toml  release_prep.py  selfie_generator.py  selfie_prompt_composer.py  similarity_engine.py  sync_from_root.bat  sync_from_root.py  tk_dialogs.py  vision_analyzer.py
docs/: AI_REPO_MAP.md  concurrent-launches-workspaces.md  cross-os-bounce-traps.md  endframe-lock-wiring.md  macos-portability.md  macos-readiness-for-windows-authors.md  model-pricing.html  oldcam-versions.md  oldcam-wiring.md  pr-review-loop.md  rppg-wiring.md  similarity-wiring.md  ssd-and-distributables.md  uv-migration.md  v13-handoff.md  v2.18-uv-migration-kickoff.md  v2.20-uv-migration-kickoff.md  windows-launcher-and-sash-rules.md
fix/: READ ME FIRST.txt  Run CUDA Cleanup.bat  cuda-cleanup.ps1
kling_gui/: carousel_widget.py  compare_panel.py  config_panel.py  dependency_repair_dialog.py  drop_zone.py  folder_identity.py  image_state.py  layout_utils.py  log_display.py  main_window.py  model_manager_dialog.py  queue_manager.py  session_controller.py  session_manager.py  tag_utils.py  theme.py  video_discovery.py  video_inspector.py  video_looper.py  video_metadata.py  workspace_markers.py
launchers/: run_cli.bat  run_cli.command  run_gui.bat  run_gui.command  run_oldcam.bat  run_oldcam.command  run_oldcam_v10.bat  run_oldcam_v10.command  run_oldcam_v11.bat  run_oldcam_v11.command  run_oldcam_v12.bat  run_oldcam_v12.command  run_oldcam_v13.bat  run_oldcam_v13.command  run_oldcam_v14.bat  run_oldcam_v14.command  run_oldcam_v15.bat  run_oldcam_v15.command  run_oldcam_v24.bat  run_oldcam_v24.command  run_oldcam_v7.bat  run_oldcam_v7.command  run_oldcam_v8.bat  run_oldcam_v8.command  run_oldcam_v9.bat  run_oldcam_v9.command  run_similarity_cli.bat  run_similarity_cli.command  run_similarity_gui.bat  run_similarity_gui.command
oldcam-testing/: .gitignore  README.md  RESUME.md  SCOREBOARD.md  mode_compare.py  oldcam_v16.py  oldcam_v17.py  oldcam_v18.py  oldcam_v19.py  oldcam_v20.py  oldcam_v21.py  oldcam_v23.py  oldcam_v24.py  oldcam_v25.py  rppg_harness.py  run_ab_test.bat  run_ab_test.command  run_ab_test.py  run_mode_compare.bat  run_rppg_harness.bat
oldcam-v10/: launcher.py  oldcam.py  oldcam_launcher.bat  requirements.txt
oldcam-v11/: launcher.py  oldcam.py  oldcam_launcher.bat
oldcam-v12/: launcher.py  oldcam.py  oldcam_launcher.bat
oldcam-v13/: launcher.py  oldcam.py  oldcam_launcher.bat  requirements.txt
oldcam-v14/: launcher.py  oldcam.py  oldcam_launcher.bat
oldcam-v15/: launcher.py  oldcam.py  oldcam_launcher.bat
oldcam-v24/: launcher.py  oldcam.py  oldcam_launcher.bat
oldcam-v7/: oldcam_launcher.bat
oldcam-v8/: oldcam.py  oldcam_launcher.bat  requirements.txt
oldcam-v9/: launcher.py  oldcam.py  oldcam_launcher.bat  requirements.txt
rPPG/: README.local.md  face_kinematics.py  rppg.bat  rppg_injector.py  run_rppg.bat  run_rppg.sh  v6_spectrum_scorer.py
resemble-score/: .gitignore  FORENSICS.md  README.md  main.py  pyproject.toml  requirements.txt  run_cli.bat  run_cli.command  run_gui.bat  run_gui.command
resemble-score/src/: cli.py  client.py  discovery.py  forensics.py  gui.py  scoring.py  theme.py
resemble-score/tests/: conftest.py  test_client.py  test_discovery.py  test_forensics.py  test_gui_threading.py  test_main_routing.py  test_scoring.py  test_theme.py
scripts/: _gen_win_uv_sync.py  _patch_uv_into_preflight.py  audit_deps.bat  audit_deps.sh  check_macos_portability.sh  cuda_dll_paths.py  detect_compromise.py  dev_local_e2e.py  ensure_uv.py  (+18 more)
(+297 files in other folders)
