[project]
name = "aa-video"
version = "3.1.0"
description = "Adversarial-attack video re-encode toolkit (isolated side-venv subproject)"
requires-python = ">=3.10,<3.13"
# CPU-minimal default set. These deliberately DIFFER from the main repo
# (numpy<2 / opencv<4.12): this subproject runs in its OWN isolated uv venv
# (aa-video/.venv) so numpy 2.x / opencv 4.x here can never reach the main
# face stack. The recommended `prime` pipeline needs only these + a system
# ffmpeg binary (NOT torch/tensorflow/insightface/face-alignment).
dependencies = [
    "numpy>=2.0,<3",
    "opencv-python>=4.10,<5",
    "moviepy>=2.0,<3",
    "scipy>=1.13,<2",
    "imageio-ffmpeg>=0.5",
    # torch (CPU build) is a DEFAULT dep so the scenario1/scenario3 attack
    # modules (micro_jitter/analog_simulation/camera_recapture/sensor_noise/
    # motion_modulation) IMPORT cleanly everywhere. They still HARD-REQUIRE a
    # CUDA GPU at runtime (`torch.cuda.is_available()` → else RuntimeError), so
    # on a CPU box they graceful-skip with a clear "needs NVIDIA GPU" message
    # instead of a confusing import failure. On an NVIDIA box the user can
    # install a CUDA torch build into this venv to actually run them. The
    # `prime` pipeline never touches torch (it has CPU-optimized fallbacks).
    "torch>=2.5,<3",
]

[project.optional-dependencies]
# Heavy GPU-only attribution/face deps used by some scenario internals — opt-in
# only (NOT in the default lock; large + CUDA-leaning).
gpu = [
    "torchvision",
    "insightface>=0.7,<1",
    "face-alignment>=1.4,<2",
]

[tool.uv]
package = false
# Force the lock to resolve for all three production OSes so a cross-OS wheel
# gap is caught at lock time (mirrors the main repo's required-environments).
# Intel macOS intentionally omitted (same as the main repo).
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
# torch (default dep) routes to the CPU index on Windows/Linux so the lock
# pins the small CPU build (no CUDA wheels — keeps the cross-OS lock resolvable
# and the venv light). The marker excludes darwin, where uv falls through to
# the PyPI macOS wheel (MPS/CPU). A user who wants scenario1/3 to actually run
# installs a CUDA torch build into this venv separately (NVIDIA box only).
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
