[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resemble-score"
version = "0.1.0"
description = "Score & compare oldcam/kling videos via the Resemble AI deepfake-detection API"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["src"]
